<resources>
    <string name="app_name">Tawseel</string>
    <string name="something_went_wrong">Something went wrong :(</string>
    <string name="permission_denied_explanation">Permission gets denied, without location permission this app won\'t
        able to perform best results.
    </string>
    <string name="permission_rationale">This permission is required to provide best weather and restaurant results based
        on location.
    </string>
    <string name="settings">Settings</string>
    <string name="customer">Customer</string>
    <string name="welcome_to_tawseel">Welcome to\nTawseel</string>
    <string name="delivery">Delivery</string>
    <string name="company">Company</string>
    <string name="skip">Skip</string>
    <string name="signup">Sign up</string>
    <string name="login_with_phone">Login with Phone</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="stores">Stores</string>
    <string name="orders">Orders</string>
    <string name="notifications">Notifications</string>
    <string name="user">User</string>
    <string name="search_text">Search for Stores</string>
    <string name="description">Description</string>
    <string name="please_enter_quantity">Please enter the Quantity</string>
    <string name="wait">Wait</string>
    <string name="yes">Yes</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_six_digit_otp">Enter 6 digit OTP sent to your mobile number</string>
    <string name="change">Change</string>
    <string name="resend_code_desc">DIdn\'t recevied the code?</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="order">Order</string>
    <string name="searching">Searching</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_">Forgot Password ?</string>
    <string name="reset">Reset</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="accept">Accept</string>
    <string name="new_order">New Order</string>
    <string name="home">Home</string>
    <string name="remaining_time">Remaining Time :</string>
    <string name="business_name">Business Name</string>
    <string name="business_description">Business Description</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="order_status">Order Status</string>
    <string name="total_bill_heading">Total Bill :</string>
    <string name="your_bill_heading">Your Bill :</string>
    <string name="cash">CASH</string>
    <string name="history">History</string>
    <string name="cart">Cart</string>
    <string name="tracking">Tracking</string>
    <string name="logout">Logout</string>
    <string name="dummy_phone_no">+1 647 7163 974</string>
    <string name="list_of_items">Items Listing</string>
    <string name="add_item">Add an Item</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="shop_now">Shop Now</string>
    <string name="deliver">Deliver</string>
    <string name="item_details">Item Details</string>
    <string name="Pizza">pizza</string>
    <string name="save">Save</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item description</string>
    <string name="upload">Upload Image</string>
    <string name="add">Add</string>
    <string name="total_price">Total Price</string>
    <string name="delivery_charges">Delivery charges</string>
    <string name="gst">General Sales Tax</string>
    <string name="sub_total">Sub Total</string>
    <string name="must_not_be_empty">must not be empty</string>
    <string name="length_constraint">must be equals to</string>
    <string name="valid_password">must contains</string>
    <string name="valid_email_address">must be a valid email address</string>
    <string name="code_has_been_sent_message">Code has been sent to your device. Kindly enter code to proceed with signup process</string>
    <string name="successfully_signup">Successfully Sign up!</string>
    <string name="signup_failed">Signup Failed</string>
    <string name="invalid_code">Invalid code. Please enter valid code to proceed.</string>
    <string name="pin_must_not_be_empty">Pin must not be empty</string>
    <string name="plus_sign">+</string>
    <string name="reject">Reject</string>
    <string name="d_o_b">D.O.B</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="address">Address</string>
    <string name="select_category">Select Category</string>
    <string name="category_label">Business Category</string>
    <string name="enter">Enter</string>
    <string name="item_price">Item Price</string>
    <string name="create_order">Create Order</string>
    <string name="order_pickup_location">Order Pickup Location</string>
    <string name="destination">Destination</string>
    <string name="order_title">Order Title</string>
    <string name="order_description">Order Description</string>
    <string name="order_price">Order Price</string>
    <string name="payment_status">Payment Status</string>
    <string name="payment_proof">Payment Proof (if paid by customer)</string>
    <string name="find_driver">Find Driver</string>
    <string name="ok">Ok</string>
    <string name="driver_documents">Driver Documents</string>
    <string name="document_submission_text">Please send the following documents to abc@gmail.com to complete your registration. \n1. 3 photos\n2. Driving license picture\n3. National Identity Card picture\n4. 3 different angle car pictures\n5. Car Details</string>
    <string name="details">Details</string>
</resources>
