<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <Button
        android:id="@+id/save"
        style="@style/Tawseel.TextView.Rounded.Background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/igloo_shape"
        android:backgroundTint="@color/scent"
        android:gravity="center"
        android:paddingStart="@dimen/x36"
        android:paddingEnd="@dimen/x36"
        android:text="@string/save"
        android:textSize="@dimen/t24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/igloo_shape"
        tools:text="@string/save" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="@dimen/x150"
        android:layout_height="@dimen/x150"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/driver_pic_avatar" />

    <ImageView
        android:id="@+id/edit_profile_image2"
        android:layout_width="@dimen/x40"
        android:layout_height="@dimen/x40"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_edit_image"
        android:src="@drawable/ico_edit"
        android:tint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        tools:visibility="visible" />

    <com.example.sarwan.tawseel.views.TawseelInfoLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:dividerColor="@color/search_grey"
        app:dividerHeight="@dimen/x2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_layout"
        app:subTitle="@string/business_name"
        app:title="@string/email" />

    <com.example.sarwan.tawseel.views.TawseelInfoLayout
        android:id="@+id/dob_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:dividerColor="@color/search_grey"
        app:dividerHeight="@dimen/x2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_layout"
        app:subTitle="@string/date_of_birth"
        app:title="@string/d_o_b" />

    <com.example.sarwan.tawseel.views.TawseelInfoLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:dividerColor="@color/search_grey"
        app:dividerHeight="@dimen/x2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:subTitle="@string/full_name"
        app:title="@string/full_name" />

</androidx.constraintlayout.widget.ConstraintLayout>