<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/add"
        style="@style/Tawseel.TextView.Rounded.Background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/igloo_shape"
        android:backgroundTint="@color/scent"
        android:elevation="@dimen/x16"
        android:gravity="center"
        android:paddingStart="@dimen/x36"
        android:paddingEnd="@dimen/x36"
        android:text="@string/add"
        android:enabled="false"
        android:textSize="@dimen/t24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/igloo_shape" />

    <ImageView
        android:id="@+id/cover2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x200"
        android:scaleType="fitXY"
        android:src="@drawable/food_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/upload"
        style="@style/Tawseel.Stroke.Background.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/upload"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cover2" />

    <com.example.sarwan.tawseel.views.TawseelTextInputLayoutWithValidation
        android:id="@+id/item_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:hint="@string/item_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload"
        app:validation_type="not_empty" />

    <com.example.sarwan.tawseel.views.TawseelTextInputLayoutWithValidation
        android:id="@+id/item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:hint="@string/item_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_name_layout"
        app:validation_type="not_empty" />

    <com.example.sarwan.tawseel.views.TawseelTextInputLayoutWithValidation
        android:id="@+id/item_price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:hint="@string/item_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_description"
        app:validation_type="price" />

</androidx.constraintlayout.widget.ConstraintLayout>