<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/enter"
        style="@style/Tawseel.TextView.Rounded.Background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/igloo_shape"
        android:backgroundTint="@color/scent"
        android:elevation="@dimen/x16"
        android:gravity="center"
        android:paddingStart="@dimen/x36"
        android:paddingEnd="@dimen/x36"
        android:text="@string/enter"
        android:enabled="false"
        android:textSize="@dimen/t24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/igloo_shape" />

    <TextView
        android:id="@+id/category_label"
        style="@style/Tawseel.TextView.Medium.Blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/category_label"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/address_label"
        style="@style/Tawseel.TextView.Medium.Blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/address"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_layout" />

    <TextView
        android:id="@+id/category_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x50"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/select_category"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="0dp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/t18"
        android:gravity="center"
        android:background="@drawable/rounded_stroke_rectangle_white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_label"/>

    <com.example.sarwan.tawseel.views.TawseelTextInputLayoutWithValidation
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_label"
        app:hint="@string/address"
        app:validation_type="not_empty" />


</androidx.constraintlayout.widget.ConstraintLayout>